<resources>
    <string name="app_name">Saezuri</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tweet">Tweet</string>
    <string name="photo">Photo/Video</string>
    <string name="logout">LogOut</string>
    <string name="login">Login</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="clear">Clear</string>
    <string name="video">Video</string>
    <string name="tweet_sending">Sending tweet…</string>
    <string name="back_to_main">Back</string>
    <string name="login_success">You have successfully logged in!</string>
    <string name="over140">Over 140 letters!</string>
    <string name="not_picked_images">You haven\'t picked image from gallery</string>
    <string name="fail_photo">You couldn\'t take photo for some reason…</string>
    <string name="attach_fail">You failed to attach image(s) or a video due to the lack of permission</string>
    <string name="permission_granted">You can attach photos or video now.</string>
    <string name="need_permission">You need permission to attach images or a video!!</string>
    <string name="warning_no_permission">No permission! You cannot upload an image!</string>
    <string name="logout_success">You have successfully logged out!</string>
    <string name="tweet_sent_success">Tweet was sent !</string>
    <string name="twitter_unavailable">Twitter unavailable. Try again later.</string>
    <string name="no_text_to_tweet">No text to tweet!</string>
    <string name="media_is_too_large">One or more of the uploaded media is too large. Try to tweet with another image.</string>
    <string name="unknown_error">The tweet wasn\'t sent for some reason. Try to tweet in a different way.</string>
    <string name="request_invalid">The request was invalid. Try again in some other way.</string>
    <string name="four_images_at_most">You cannot send no more than 4 images!</string>
    <string name="size_too_large">At least one of the images\' size is too large ! Try with another one.</string>
    <string name="privacy_policy" translatable="false"><a href="https://yasumtl.github.io/privacy_policy/saezuri.html">Privacy Policy</a></string>
    <string name="admob_id" translatable="false">ca-app-pub-6638004970288520~6863230244</string>
    <string name="adUnit_id" translatable="false">ca-app-pub-6638004970288520/8645239296</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>